feature/hyperbolic-demo-update

--- a/misc/DEMO_run_model_on_hyperbolic.ipynb
+++ b/misc/DEMO_run_model_on_hyperbolic.ipynb
@@ -2,34 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "7a8a30540d823229",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T13:59:34.679446Z",
-     "start_time": "2025-07-29T13:59:34.677101Z"
+     "end_time": "2025-07-29T15:12:42.317916Z",
+     "start_time": "2025-07-29T15:12:42.316319Z"
     }
    },
-   "outputs": [],
    "source": [
     "from turtledemo.sorting_animate import instructions1\n",
+    "\n",
+    "from datetime import datetime\n",
     "\n",
     "from IPython.display import Markdown, display\n",
     "from dotenv import load_dotenv\n",
     "import os"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "212665a0548fd219",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-29T15:12:43.781458Z",
+     "start_time": "2025-07-29T15:12:43.778402Z"
+    }
+   },
    "source": [
     "load_dotenv()\n",
     "api_key = os.getenv('HYPERBOLIC_API_KEY')\n",
     "BASE_URL = \"https://api.hyperbolic.xyz/v1\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -40,52 +47,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T14:45:47.788759Z",
-     "start_time": "2025-07-29T14:45:45.798377Z"
+     "end_time": "2025-07-29T15:12:53.496033Z",
+     "start_time": "2025-07-29T15:12:53.493735Z"
     }
    },
+   "cell_type": "code",
+   "source": "print(response.json())",
+   "id": "2c532a32a4be2c7a",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here's one:\n",
-      "\n",
-      "What do you call a fake noodle?\n",
-      "\n",
-      "An impasta!\n",
-      "\n",
-      "Hope that made you laugh! Do you want to hear another one?\n"
+      "{'id': 'chatcmpl-bD43qHfQqgaQNcumV7hWGk', 'object': 'chat.completion', 'created': 1753801967, 'model': 'meta-llama/Llama-3.3-70B-Instruct', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'Why did the astronaut break up with his girlfriend before going to Mars?\\n\\nBecause he needed space, and she was always gravitating towards drama! (get it?)', 'tool_calls': []}, 'finish_reason': 'stop', 'logprobs': None}], 'usage': {'prompt_tokens': 35, 'total_tokens': 68, 'completion_tokens': 33}}\n"
      ]
     }
    ],
-   "source": [
-    "import requests\n",
-    "\n",
-    "url = f\"{BASE_URL}/chat/completions\"\n",
-    "headers = {\n",
-    "    \"Content-Type\": \"application/json\",\n",
-    "    \"Authorization\": f\"Bearer {api_key}\"\n",
-    "}\n",
-    "data = {\n",
-    "    \"messages\": [{\n",
-    "      \"role\": \"user\",\n",
-    "      \"content\": \"Tell me a joke\"\n",
-    "    }],\n",
-    "    \"model\": \"meta-llama/Llama-3.3-70B-Instruct\",\n",
-    "    \"max_tokens\": 100,\n",
-    "    \"temperature\": 0.1,\n",
-    "    \"top_p\": 0.9\n",
-    "}\n",
-    "\n",
-    "response = requests.post(url, headers=headers, json=data)\n",
-    "print(response.json()['choices'][0]['message']['content'])"
-   ]
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -176,23 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
    "id": "1f49ebe6cbf724b1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T15:03:15.048784Z",
-     "start_time": "2025-07-29T15:03:12.055298Z"
+     "end_time": "2025-07-29T15:09:07.201623Z",
+     "start_time": "2025-07-29T15:09:06.489039Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Why was the morgue employee always in a good mood? Because he was always dying to get to work!\n"
-     ]
-    }
-   ],
    "source": [
     "from openai import AsyncOpenAI\n",
     "from agents import Agent, Runner, trace, function_tool, OpenAIChatCompletionsModel, input_guardrail, GuardrailFunctionOutput, ModelSettings\n",
@@ -216,10 +186,24 @@
     ")\n",
     "\n",
     "with trace(\"Hyperbolic agent\"):\n",
-    "    result = await Runner.run(hyperbolic_agent, \"Tell me a joke.\")\n",
+    "    result = await Runner.run(hyperbolic_agent, \"Tell me a new joke.\")\n",
     "\n",
     "    print(result.final_output)"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BASE_URL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 6\u001B[39m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01magents\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Agent, Runner, trace, function_tool, OpenAIChatCompletionsModel, input_guardrail, GuardrailFunctionOutput, ModelSettings\n\u001B[32m      4\u001B[39m model_name = \u001B[33m\"\u001B[39m\u001B[33mmeta-llama/Meta-Llama-3.1-70B-Instruct\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m hyperbolic_client = AsyncOpenAI(base_url=\u001B[43mBASE_URL\u001B[49m,\n\u001B[32m      7\u001B[39m                                 api_key=api_key\n\u001B[32m      8\u001B[39m                                 )\n\u001B[32m      9\u001B[39m hyperbolic_model = OpenAIChatCompletionsModel(model= model_name,\n\u001B[32m     10\u001B[39m                                               openai_client=hyperbolic_client\n\u001B[32m     11\u001B[39m                                               )\n\u001B[32m     13\u001B[39m model_settings = ModelSettings(temperature=\u001B[32m0.1\u001B[39m, max_tokens=\u001B[32m100\u001B[39m, top_p=\u001B[32m0.2\u001B[39m)\n",
+      "\u001B[31mNameError\u001B[39m: name 'BASE_URL' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -232,10 +216,10 @@
      "evalue": "'Agent' object has no attribute 'run'",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mhyperbolic_agent\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mTell me a joke.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Agent' object has no attribute 'run'"
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[13]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mhyperbolic_agent\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun\u001B[49m(\u001B[33m\"\u001B[39m\u001B[33mTell me a joke.\u001B[39m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mAttributeError\u001B[39m: 'Agent' object has no attribute 'run'"
      ]
     }
    ],
