feature/demo-tools-one-more

--- a/DEMO/tools/DEMO_notebook_tools_with_api_calls_1.ipynb
+++ b/DEMO/tools/DEMO_notebook_tools_with_api_calls_1.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ad4f5c02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nJust a demo of using direct calls with OpenAI util to parse and use tools\\nIn this example there simple numeric operations\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Just a demo of using direct calls with OpenAI util to parse and use tools\n",
@@ -15,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "cb2369f4",
    "metadata": {},
    "outputs": [],
@@ -31,13 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "ff872b18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from openai import OpenAI\n",
+    "\n",
     "\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n"
    ]
@@ -427,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
